Take platform areas into account when linking